# HacktoberFest2020-Contributions

./: .gitmodules  3dbounce.cpp  3dcontourplots.py  3digit_armstrong_number_checker.c  8Puzzle_problem.py  Activity_Main.xml  All_Order_Edge_Detection.ipynb  ArrayRotation.java  Arrays.py  Banker's Algorithm Implementation  Binarysearch  Box.java  CH_2.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.pl.md  CONTRIBUTORS.md  Calculator in C.c  Contribute.md  Cp_template  DFS.c  Even number series  Factors.py  French-Readme.md  Functions.py  GuessTheNo.py  HW.cpp  HacktoberFest2020-Contributions.html  Hangout  HelloWorld_program.md  Hello_World_New.cpp  I_love_you.py  Indonesian-Readme.md  InfoBox.css  Italian-Readme.md  Jhonsons algorithm  LICENSE  LinearSearch.cpp  LinearSearch.java  Linear_Search.cpp  (+80 more)
Algorithms/: 8Puzzle_problem.py  ASCII.java  Adaking.java  Automorphic number  BFS.java  Binary Search  BinarySearch.java  BinarySearchTree.java  Binary_Search.py  Btree  COUNT_CASE_RECURSION_STRING.java  CompoundInterest.java  Count of Islands in O(1) Space complexity.cpp  Count the Occurrences of a Word in a Text File.py  CountingSort.cpp  Cpp_powercal  DFS.cpp  De-Queue(Double Sided).c  Diameter of Binary Tree.java  DiameterOfTreeUsingDFS.cpp  DigitalClock.java  Fibonacci_Search.cpp  GCDOPS.cpp  GreedyAgain.c  N_Queens.c  (+96 more)
Algorithms/C++_Decorator/: AbstractStream.hpp  CMakeLists.txt  CommaDecorator.cpp  CommaDecorator.hpp  ConcreteStream.hpp  NumberDecorator.cpp  NumberDecorator.hpp  ParenthesesDecorator.cpp  ParenthesesDecorator.hpp  StreamDecorator.hpp  main.cpp
(+2146 files in other folders)
